--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <title>Meu Portifólio - Rodolfo Miranda</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body >
     <nav>
-        <ul class="menu">
-
+        <div class="nav">
+            <span></span>Home
+        </div>
+        <ul id="menu">
+            <li><a href="">Home</a></li>
+            <li><a href="">Sobre</a></li>
+            <li><a href="">Contato</a></li>
+            
         </ul>
     </nav>
 </body>
