--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 </head>
 <body >
     <nav>
-        <div class="nav">
-            <span></span>Home
+        <div class="menu">
+            <div class="nav">
+                <span data-content="Sobre"></span>Sobre
+            </div>
+            <div class="nav">
+                <span data-content="Portifoleo"></span>Portifoleo
+            </div>
+            <div class="nav">
+                <span data-content="Contato"></span>Contato
+            </div>
         </div>
-        <ul id="menu">
-            <li><a href="">Home</a></li>
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Contato</a></li>
-            
-        </ul>
     </nav>
 </body>
 </html>
