--- a/index.html
+++ b/index.html
@@ -21,5 +21,15 @@
             </div>
         </div>
     </nav>
+
+    <div>
+        <img src="img/rodolfomirandaperfil.png" alt="">
+    </div>
+
+    <div class="prgf">
+        <p>
+            Hello World!
+        </p>
+    </div>
 </body>
 </html>
