--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portifólio - Rodolfo Miranda</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body >
     <nav>
@@ -14,22 +15,39 @@
                 <span data-content="Sobre"></span>Sobre
             </div>
             <div class="nav">
-                <span data-content="Portifoleo"></span>Portifoleo
+                <span data-content="Portifoleo"></span>Portifólio
             </div>
             <div class="nav">
                 <span data-content="Contato"></span>Contato
             </div>
         </div>
-    </nav>
 
-    <div>
         <img src="img/rodolfomirandaperfil.png" alt="">
+    </nav>
+    <div>
+        <h2>Hello World!</h2>
+    </div>
+    <div class="hello">
+        <h1 class="line typing-animation">Rodolfo Miranda</h1>
     </div>
 
-    <div class="prgf">
-        <p>
-            Hello World!
-        </p>
+    <div class="redes">
+        <a href="https://www.instagram.com/rodolfo.mrnd/" target="_blank"><i class="fa-brands fa-instagram fa-3x" style="color: #ffd700;"></i></a>
+        <a href="https://github.com/Wojjtz" target="_blank"><i class="fa-brands fa-github fa-3x" style="color: #ffd700;"></i></a>
+        <i class="fa-brands fa-twitter fa-3x" style="color: #ffd700;"></i>
     </div>
+    
+    <div class="wrapper">
+        <div class="txt-static">Eu sou</div>
+        <div class="txt-dinamic">
+            <ul>
+                <li>Desevolvedor</li>
+                <li>Programador</li>
+                <li>Lindo</li>
+            </ul>
+        </div>
+    </div>
+   
+    
 </body>
 </html>
