--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,32 +9,57 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body >
-    <nav>
-        <div class="menu">
-            <div class="nav">
-                <span data-content="Sobre"></span>Sobre
-            </div>
-            <div class="nav">
-                <span data-content="Portifoleo"></span>Portifólio
-            </div>
-            <div class="nav">
-                <span data-content="Contato"></span>Contato
+
+<body>
+    <div class="bg">
+        <header>
+            <nav>
+                <div class="menu">
+                    <a href="#sec2">
+                        <div class="nav">
+                            <span data-content="Sobre"></span>Sobre
+                    </a>
+                </div></a>
+                <div class="nav">
+                    <span data-content="Projetos"></span>Projetos
+                </div>
+
+                <div class="nav">
+                    <span data-content="Carreira"></span>Carreira
+                </div>
+                <div class="nav">
+                    <span data-content="Contato"></span>Contato
+                </div>
+    </div>
+    </nav>
+    <div class="redes">
+        <a href="https://www.instagram.com/rodolfo.mrnd/" target="_blank"><i class="fa-brands fa-instagram fa-3x"
+                style="color: #ffd700;"></i></a>
+        <a href="https://github.com/Wojjtz" target="_blank"><i class="fa-brands fa-github fa-3x"
+                style="color: #ffd700;"></i></a>
+        <a href="https://www.linkedin.com/in/rodolfo-miranda-8971a6265/" target="_blank"><i
+                class="fa-brands fa-linkedin fa-3x" style="color: #ffd700;"></i></a>
+        <a href="https://www.twitter.com/justwojtz" target="_blank"><i class="fa-brands fa-twitter fa-3x"
+                style="color: #ffd700;"></i></a>
+    </div>
+    </header>
+    <section id="sec1">
+
+
+        <div>
+            <img src="img/rodolfomirandaperfil.png" alt="">
+            <div>
+                <div class="hello">
+                    <h1 class="line typing-animation">Rodolfo Miranda</h1>
+                </div>
             </div>
         </div>
+    </section>
 
-        <img src="img/rodolfomirandaperfil.png" alt="">
-    </nav>
-    
-    <div class="hello">
-        <h1 class="line typing-animation">Rodolfo Miranda</h1>
-    </div>
+    <section id="sec2">
 
-    <div class="redes">
-        <a href="https://www.instagram.com/rodolfo.mrnd/" target="_blank"><i class="fa-brands fa-instagram fa-3x" style="color: #ffd700;"></i></a>
-        <a href="https://github.com/Wojjtz" target="_blank"><i class="fa-brands fa-github fa-3x" style="color: #ffd700;"></i></a>
-        <i class="fa-brands fa-twitter fa-3x" style="color: #ffd700;"></i>
+    </section>
     </div>
-    
 </body>
+
 </html>
