--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         <header>
             <nav>
                 <div class="menu">
-                    <a href="#sec2">
+                    <a href="#sec2" class="a-header">
                         <div class="nav">
                             <span data-content="Sobre"></span>Sobre
                     </a>
-                </div></a>
+                </div>
+
                 <div class="nav">
                     <span data-content="Projetos"></span>Projetos
                 </div>
@@ -30,35 +31,35 @@
                 <div class="nav">
                     <span data-content="Contato"></span>Contato
                 </div>
-    </div>
-    </nav>
-    <div class="redes">
-        <a href="https://www.instagram.com/rodolfo.mrnd/" target="_blank"><i class="fa-brands fa-instagram fa-3x"
-                style="color: #ffd700;"></i></a>
-        <a href="https://github.com/Wojjtz" target="_blank"><i class="fa-brands fa-github fa-3x"
-                style="color: #ffd700;"></i></a>
-        <a href="https://www.linkedin.com/in/rodolfo-miranda-8971a6265/" target="_blank"><i
-                class="fa-brands fa-linkedin fa-3x" style="color: #ffd700;"></i></a>
-        <a href="https://www.twitter.com/justwojtz" target="_blank"><i class="fa-brands fa-twitter fa-3x"
-                style="color: #ffd700;"></i></a>
-    </div>
-    </header>
-    <section id="sec1">
 
+            </nav>
+            <!--
+            <div class="redes">
+                <a href="https://www.instagram.com/rodolfo.mrnd/" target="_blank"><i
+                        class="fa-brands fa-instagram fa-3x" style="color: #ffd700;"></i></a>
+                <a href="https://github.com/Wojjtz" target="_blank"><i class="fa-brands fa-github fa-3x"
+                        style="color: #ffd700;"></i></a>
+                <a href="https://www.linkedin.com/in/rodolfo-miranda-8971a6265/" target="_blank"><i
+                        class="fa-brands fa-linkedin fa-3x" style="color: #ffd700;"></i></a>
+                <a href="https://www.twitter.com/justwojtz" target="_blank"><i class="fa-brands fa-twitter fa-3x"
+                        style="color: #ffd700;"></i></a>
+            </div>
+            -->
+        </header>
 
-        <div>
-            <img src="img/rodolfomirandaperfil.png" alt="">
+        <section class="sec" id="sec1">
             <div>
-                <div class="hello">
-                    <h1 class="line typing-animation">Rodolfo Miranda</h1>
+                <img src="img/rodolfomirandaperfil.png" alt="">
+                <div>
+                    <div class="hello">
+                        <h1 class="line typing-animation">Rodolfo Miranda</h1>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+        <section class="sec" id="sec2">
 
-    <section id="sec2">
-
-    </section>
+        </section>
     </div>
 </body>
 
