--- a/index.html
+++ b/index.html
@@ -8,30 +8,37 @@
     <title>Meu Portifólio - Rodolfo Miranda</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="script.js">
 </head>
 
 <body>
     <div class="bg">
         <header>
+            <div class="header-bg">
+            </div>
             <nav>
                 <div class="menu">
+                    <a href="#sec1" class="a-header">
+                        <div class="nav">
+                            <span data-content="Início"></span>Início
+                        </div>
+                    </a>
                     <a href="#sec2" class="a-header">
                         <div class="nav">
-                            <span data-content="Sobre"></span>Sobre
+                            <span data-content="Carreira"></span>Carreira
+                        </div>
+                    </a>
+                    <a href="#sec3" class="a-header">
+                        <div class="nav">
+                            <span data-content="Projetos"></span>Projetos
+                        </div>
+                    </a>
+                    <a href="#sec4" class="a-header">
+                        <div class="nav">
+                            <span data-content="Contato"></span>Contato
+                        </div>
                     </a>
                 </div>
-
-                <div class="nav">
-                    <span data-content="Projetos"></span>Projetos
-                </div>
-
-                <div class="nav">
-                    <span data-content="Carreira"></span>Carreira
-                </div>
-                <div class="nav">
-                    <span data-content="Contato"></span>Contato
-                </div>
-
             </nav>
             <!--
             <div class="redes">
@@ -46,10 +53,9 @@
             </div>
             -->
         </header>
-
         <section class="sec" id="sec1">
             <div>
-                <img src="img/rodolfomirandaperfil.png" alt="">
+                <img class="img-perfil" src="img/rodolfomirandaperfil.png" alt="">
                 <div>
                     <div class="hello">
                         <h1 class="line typing-animation">Rodolfo Miranda</h1>
@@ -58,6 +64,12 @@
             </div>
         </section>
         <section class="sec" id="sec2">
+
+        </section>
+        <section class="sec" id="sec3">
+
+        </section>
+        <section class="sec" id="sec4">
 
         </section>
     </div>
