--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portifólio - Rodolfo Miranda</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="script.js">
 </head>
 
 <body>
     <div class="bg">
         <header>
-            <div class="header-bg">
-            </div>
             <nav>
                 <div class="menu">
                     <a href="#sec1" class="a-header">
@@ -41,16 +39,7 @@
                 </div>
             </nav>
             <!--
-            <div class="redes">
-                <a href="https://www.instagram.com/rodolfo.mrnd/" target="_blank"><i
-                        class="fa-brands fa-instagram fa-3x" style="color: #ffd700;"></i></a>
-                <a href="https://github.com/Wojjtz" target="_blank"><i class="fa-brands fa-github fa-3x"
-                        style="color: #ffd700;"></i></a>
-                <a href="https://www.linkedin.com/in/rodolfo-miranda-8971a6265/" target="_blank"><i
-                        class="fa-brands fa-linkedin fa-3x" style="color: #ffd700;"></i></a>
-                <a href="https://www.twitter.com/justwojtz" target="_blank"><i class="fa-brands fa-twitter fa-3x"
-                        style="color: #ffd700;"></i></a>
-            </div>
+            
             -->
         </header>
         <section class="sec" id="sec1">
@@ -59,6 +48,9 @@
                 <div>
                     <div class="hello">
                         <h1 class="line typing-animation">Rodolfo Miranda</h1>
+                    </div>
+                    <div class="desc">
+                        <h2>Hello World!</h2>
                     </div>
                 </div>
             </div>
@@ -70,6 +62,24 @@
 
         </section>
         <section class="sec" id="sec4">
+            <div style="height: auto; width: auto;">
+                <div class="by-rm">
+                    <p><b>by Rodolfo Miranda</b</p>
+                </div>
+
+                <div class="redes">
+                    <a href="https://www.instagram.com/rodolfo.mrnd/" target="_blank"><i
+                            class="fa-brands fa-instagram fa-4x" style="color: #302215;"></i></a>
+                    <a href="https://github.com/Wojjtz" target="_blank"><i class="fa-brands fa-github fa-4x"
+                            style="color: #302215;"></i></a>
+                    <a href="https://www.linkedin.com/in/rodolfo-miranda-8971a6265/" target="_blank"><i
+                            class="fa-brands fa-linkedin fa-4x" style="color: #302215;"></i></a>
+                    <a href="https://www.twitter.com/justwojtz" target="_blank"><i class="fa-brands fa-x-twitter fa-4x"
+                            style="color: #302215;"></i></a>
+                    <a href="mailto:rodolfomiranda.work@gmail.com" target="_blank"><i class="fa-solid fa-envelope fa-4x"
+                            style="color: #302215;"></i></a>
+                </div>
+            </div>
 
         </section>
     </div>
