--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <section class="sec" id="sec3">
 
         </section>
-        <section class="sec" id="sec4">
+        <section id="sec4">
             <div style="height: auto; width: auto;">
                 <div class="by-rm">
                     <p><b>by Rodolfo Miranda</b</p>
@@ -80,7 +80,6 @@
                             style="color: #302215;"></i></a>
                 </div>
             </div>
-
         </section>
     </div>
 </body>
