--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <nav>
                 <div class="menu">
-                    <a href="#sec2" class="a-header">
+                    <a href="#sec2">
                         <div class="nav">
                             <span data-content="Sobre"></span>Sobre
                     </a>
@@ -48,17 +48,14 @@
         </header>
 
         <section class="sec" id="sec1">
-            <div>
-                <img src="img/rodolfomirandaperfil.png" alt="">
-                <div>
-                    <div class="hello">
-                        <h1 class="line typing-animation">Rodolfo Miranda</h1>
-                    </div>
-                </div>
+            <div class="hello">
+                <h1 class="line typing-animation">Rodolfo O. Miranda</h1>
             </div>
         </section>
         <section class="sec" id="sec2">
-
+            <div class="about">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere deserunt unde dolor modi odit repellat consequuntur eveniet, assumenda veritatis, nemo explicabo harum minima ipsam consectetur quo alias voluptatum dolore distinctio.
+            </div>
         </section>
     </div>
 </body>
